--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,5 @@
 @import "normalize";
+@import "font";
 
 html, body, #app {
   height: 100%;
@@ -6,4 +7,9 @@ html, body, #app {
 
 body.no-scroll {
   overflow: hidden;
+}
+
+.container {
+  max-width: 1024px;
+  margin: 0 auto;
 }
