T2 - create page profile

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,4 +1,9 @@
 :root {
   --text-color: #030303;
   --background-color: #c3c3c3;
+  --secondary-bc-1: #D0DBBD;
+  --secondary-bt-1: #020203;
+  --subtitle-color: #5b5b5b;
+  --default-c-1: #7f4a87;
+  --default-bc-1: #F7F5FA;
 }
