--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -1,4 +1,18 @@
 .auth {
+    .loader {
+        border: 3px solid #f3f3f3; 
+        border-top: 3px solid #3498db; 
+        border-radius: 50%;
+        width: 15px;
+        height: 15px;
+        animation: spin 2s linear infinite;
+        margin-left: 5px;
+      }
+      
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
     h1 {
         font-family: var(--font-inter);
         font-size: 32px;
